m_2_l_12: changed about, fixed margin and padding

--- a/style/faq.css
+++ b/style/faq.css
@@ -18,6 +18,9 @@
     font-weight: 700;
     font-size: 24px;
     padding: 30px 70px;
+}
+
+.faq__item:not(:last-child) {
     margin-bottom: 20px;
 }
 
