--- a/style/about.css
+++ b/style/about.css
@@ -6,18 +6,39 @@
   margin-bottom: 50px;
 }
 
+.about__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.about__img {
+  width: 600px;
+  min-height: 596px;
+  background: url("../img/about.jpg") no-repeat;
+}
+
+.about__info {
+  max-width: 500px;
+}
+
+
 .about__text {
   font-size: 20px;
   font-weight: 400;
   line-height: 28px;
 }
 
-.about__text:not(:last-child) {
-  margin-bottom: 45px;
+.about__text-wrapper {
+  margin-bottom: 40px;
+}
+
+.about__text-wrapper p:not(:last-child) {
+  margin-bottom: 40px;
 }
 
 .about__quote-wrapper {
   margin-bottom: 40px;
+  padding-left: 30px;
 }
 
 .about__quote {
@@ -26,7 +47,6 @@
   font-size: 44px;
   line-height: 50px;
   text-transform: uppercase;
-  padding-left: 56px;
 }
 
 .about__quote-top::before {
@@ -36,7 +56,7 @@
   content: " ";
   height: 35px;
   width: 40px;
-  left: 0;
+  left: -30px;
 }
 
 .about__quote-bottom::after {
@@ -46,16 +66,20 @@
   content: " ";
   height: 35px;
   width: 40px;
-  left: 1050px;
+  left: 340px;
 }
 
 .about__cite {
   display: flex;
   justify-content: space-between;
-  padding-left: 790px;
-  max-width: 1140px;
+  padding-left: 111px;
+}
+
+.about__cite-img {
+  width: 80px;
+  height: 80px;
 }
 
 .about__cite-text {
-  max-width: 234px;
+  max-width: 280px;
 }
