--- a/style/style.css
+++ b/style/style.css
@@ -4,5 +4,6 @@
 @import "hall.css";
 @import "booking.css";
 @import "about.css";
+@import "review.css";
 @import "faq.css";
 @import "contact.css";
