m_3_l_1 rewrote with flex, added header

--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,11 @@
 @import "normolize.css";
 @import "global.css";
+@import "header.css";
 @import "hero.css";
+@import "advertising.css";
 @import "hall.css";
 @import "booking.css";
 @import "about.css";
 @import "review.css";
 @import "faq.css";
-@import "contact.css";
+@import "footer.css";
