--- a/style/booking.css
+++ b/style/booking.css
@@ -1,7 +1,233 @@
 .booking {
-  padding: 50px 22px;
+  background-color: #440F51;
+  padding: 80px 0;
 }
 
 .booking__title {
   margin-bottom: 50px;
+}
+
+.booking fieldset {
+  border: none;
+}
+
+.booking__hall {
+  margin-bottom: 60px;
+}
+
+.booking__subtitle {
+  margin-bottom: 40px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  text-align: center;
+}
+
+.booking__subtitle--margin-bottom {
+  margin-bottom: 23px;
+  text-align: left;
+}
+
+.booking__hall-wrapper {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 40px;
+}
+
+.booking__hall-label {
+  display: block;
+  width: 250px;
+  padding: 7px 15px 8px;
+  border-radius: 8px;
+  background-color: #ffffff;
+  color: #000000;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 40px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.radio-input,
+.checkbox-input {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
+
+.booking__entertainment {
+  margin-bottom: 60px;
+}
+
+.booking__entertainment-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.booking__entertainment-item-wrapper {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  font-size: 22px;
+}
+.booking__entertainment-radio-label {
+  position: relative;
+  padding-left: 32px;
+}
+
+.booking__entertainment-radio::before {
+  position: absolute;
+  display: block;
+  width: 27px;
+  height: 27px;
+  content: "";
+  background-color: #ffffff;
+  border-radius: 50%;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.booking__entertainment-checkbox-label {
+  position: relative;
+  padding-left: 32px;
+}
+
+.booking__entertainment-checkbox::before {
+  position: absolute;
+  display: block;
+  width: 25px;
+  height: 25px;
+  content: "";
+  background-color: #ffffff;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.booking__entertainment-add {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  font-size: 22px;
+}
+
+.booking__group-wrapper {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 50px;
+}
+
+.booking__date {
+  margin-bottom: 40px;
+}
+
+.booking__date-group1 {
+  max-width: 300px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 36px 32px;
+}
+
+.booking__date-group1-label {
+  position: relative;
+  background-color: #ffffff;
+  width: 134px;
+  height: 52px;
+}
+
+.booking__date-group1-label-people {
+  width: 300px;
+}
+
+.booking__date-group1-span {
+  position: absolute;
+  top: 12px;
+  left: 20px;
+  color: #000000;
+  font-size: 18px;
+  line-height: 28px;
+}
+
+.booking__date-group1-input {
+  opacity: 0;
+}
+
+.booking__date-group1-label::after {
+  position: absolute;
+  display: block;
+  width: 21px;
+  height: 15px;
+  content: "";
+  background: url("../img/icons/downBlack.svg") no-repeat;
+  top: 22px;
+  left: 86px;
+}
+
+.booking__date-group1-label-people::after {
+  position: absolute;
+  display: block;
+  width: 21px;
+  height: 15px;
+  content: "";
+  background: url("../img/icons/downBlack.svg") no-repeat;
+  top: 22px;
+  left: 252px;
+}
+
+.booking__date-group2 {
+  max-width: 280px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  row-gap: 36px;
+}
+
+.booking__date-group2-label {
+  position: relative;
+}
+
+.booking__date-group2-span {
+  position: absolute;
+  display: block;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16px;
+  top: -22px;
+  left: 0;
+}
+
+.booking__date-group2-input {
+  width: 280px;
+  height: 52px;
+}
+
+.booking__date-group3 {
+  max-width: 300px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  row-gap: 36px;
+}
+
+.booking__date-group3-input {
+  width: 300px;
+  height: 52px;
+}
+
+.booking__button-wrapper {
+  padding-left: 870px;
+}
+
+.booking__button {
+  background-color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  color: #6C0287;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 28px;
+  text-transform: uppercase;
+  padding: 16px 50px;
 }
