--- a/style/booking.css
+++ b/style/booking.css
@@ -71,7 +71,39 @@
   -moz-appearance: none;
   -webkit-appearance: none;
 }
+/*
+.checkbox-input::after {
+  position: absolute;
+  content: '';
+  top: 5px;
+  left: 3px;
+  border: 2px solid black;
+  border-top: none;
+  border-right: none;
+  height: 10px;
+  width: 20px;
+  opacity: 0;
+  transform: rotate(-45deg);
+}
 
+.radio-input::after {
+  position: absolute;
+  content: '';
+  top: 9px;
+  left: 10px;
+  height: 8px;
+  width: 8px;
+  border-radius: 50%;
+  background-color: #2c2929;
+  opacity: 0;
+  transform: rotate(-45deg);
+}
+
+.checkbox-input:checked::after,
+.radio-input:checked::after {
+  opacity: 1
+}
+*/
 .booking__entertainment {
   margin-bottom: 60px;
 }
@@ -112,21 +144,14 @@
 }
 
 .booking__entertainment-radio:focus::before {
-  /*
-  outline: 1px solid #cd06ff;
-  outline-offset: 2px;
-   */
   position: absolute;
   display: block;
   width: 46px;
   height: 46px;
   content: "";
   left: -9px;
-  top: 50%;
-  transform: translateY(-50%);
-  outline: 1px solid transparent;
   background: url("../img/icons/radioFocus.svg") no-repeat center;
-
+  background-size: 33px;
 }
 
 .booking__entertainment-checkbox-label {
