--- a/style/booking.css
+++ b/style/booking.css
@@ -1,5 +1,5 @@
 .booking {
-  background-color: #440F51;
+  background-color: var(--backgroundColor, #440f51);
   padding: 80px 0;
 }
 
@@ -40,8 +40,8 @@
   padding: 7px 15px 8px;
   border: 3px solid transparent;
   border-radius: 8px;
-  background-color: #ffffff;
-  color: #000000;
+  background-color: var(--backgroundColor, #ffffff);
+  color: var(--color, #000000);
   font-size: 30px;
   font-weight: 700;
   line-height: 40px;
@@ -112,10 +112,6 @@
 }
 
 .booking__entertainment-radio:focus::before {
-  /*
-  outline: 1px solid #cd06ff;
-  outline-offset: 2px;
-   */
   position: absolute;
   display: block;
   width: 46px;
