--- a/style/faq.css
+++ b/style/faq.css
@@ -9,8 +9,8 @@
 
 .faq__item {
     position: relative;
-    background-color: #FFFFFF;
-    color: #1C1A1A;
+    background-color: var(--backgroundColor, #ffffff);
+    color: var(--color, #1c1a1a);
     font-weight: 700;
     font-size: 24px;
     padding: 30px 70px;
@@ -21,8 +21,8 @@
 }
 
 .faq__item:nth-child(even) {
-    background-color: #440F51;
-    color: #FFFFFF;
+    background-color: var(--backgroundColor, #440F51);
+    color: var(--color, #ffffff);
 }
 
 .faq__item:nth-child(odd)::after {
