--- a/style/header.css
+++ b/style/header.css
@@ -19,7 +19,7 @@
   background-color: transparent;
   border: 3px solid #cd06ff;
   border-radius: 10px;
-  color: #ffffff;
+  color: var(--color, #ffffff);
   font-size: 22px;
   font-weight: 700;
   text-transform: uppercase;
